welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
	if (estSurBiscuit()) { vuBiscuit = true; return}
                                                 ^Program:7: error: type mismatch;
 found   : Unit
 required: Boolean
		if (estSurBiscuit()) { vuBiscuit = true; return }
                                                         ^Program:6: error: type mismatch;
 found   : Unit
 required: Boolean
		for (x <- 1 to 6) {
                       ^